<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.poittevin.francois.aurisquedevousplaire.ui.dataBindingUtils.Converter" />

        <variable
            name="viewModel"
            type="com.poittevin.francois.aurisquedevousplaire.ui.reductionDialog.ReductionViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:orientation="horizontal"
            android:padding="@dimen/default_margin">

            <TextView
                style="@style/Title6Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:drawablePadding="@dimen/default_margin"
                android:text="@string/reductions"
                app:drawableStartCompat="@drawable/ic_baseline_promotion_24" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={Converter.intToString(viewModel.price)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/price_after_reduction" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            style="@style/bigText"
            app:price="@{viewModel.priceWithReduction}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_dialog_reduction_cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/cancel"
                app:icon="@drawable/ic_baseline_close_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_dialog_reduction_use_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/useTheReduction"
                app:icon="@drawable/ic_baseline_promotion_24" />

        </LinearLayout>

    </LinearLayout>
</layout>